[tool.poetry]
name = "proj-name"
version = "1.0.0"
description = ""
authors = ["ethan-mcconkey <ethanmcconkey@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
coverage = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[tool.poe.tasks]
type = 'mypy ./proj_name --strict'
test = 'pytest'
test-cov = 'pytest --cov=proj_name'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
